Fixed table text alignment

--- a/Teuerungsportal/Teuerungsportal/wwwroot/css/index.css
+++ b/Teuerungsportal/Teuerungsportal/wwwroot/css/index.css
@@ -30,3 +30,9 @@
 .mud-typography:focus-visible {
     outline: none!important;
 }
+
+@media (max-width: 600px) {
+    .mud-xs-table .mud-table-cell {
+        text-align: end!important;
+    }
+}
